--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         <div class="info_container">
             <div class="box">
             <img src="./imgs/cat1.jpg" alt="First cat">
-            <div class="desc">this is some subtext under an illustration or image</div>
+            <div class="des">this is some subtext under an illustration or image</div>
             </div>
             <div class="box">
             <img src="./imgs/cat2.jpg" alt="Second cat">
-            <div class="desc">this is some subtext under an illustration or image</div>
+            <div class="des">this is some subtext under an illustration or image</div>
             </div>
             <div class="box">
             <img src="./imgs/cat3.jpg" alt="Third cat">
-            <div class="desc">this is some subtext under an illustration or image</div>
+            <div class="des">this is some subtext under an illustration or image</div>
             </div>
             <div class="box">
             <img src="./imgs/cat4.jpg" alt="Fourth cat">
-            <div class="desc">this is some subtext under an illustration or image</div>
+            <div class="des">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </section>
@@ -64,13 +64,15 @@
     </section>
 
     <section>
+        <div class="cta_main_container">
         <div class="cta_container">
             <div class="cta_left">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h3 class="cta_title">Call to action! It's time!</h3>
+                <p class="desc">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="cta_right">
                 <button class="cta_button">Sign  up</button>
+            </div>
             </div>
         </div>
     </section>
